--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-primary-content flex h-auto w-full justify-center px-5">
+<footer class="bg-primary-content flex h-auto w-full justify-center px-5 bottom-0 ">
     <div class="max-w-screen-lg pt-7 pb-2 text-base-content w-full prose">
         <div class="grid grid-cols-1 md:grid-cols-3 mb-6 gap-12">
             <!-- Contact -->
