--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import { type BlogSchema } from "../../content/config";
-import PostLayout from "../../layouts/PostLayout.astro";
-import createSlug from "../../lib/create_slug";
+import { type BlogSchema } from "@content/config";
+import PostLayout from "@layouts/PostLayout.astro";
+import createSlug from "@lib/create_slug";
 
 export const prerender = true;
 
