--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "@layouts/Layout.astro";
 import { Icon } from "astro-icon/components";
 import { EXPERIENCES } from "../config";
-import TimeLine from "../components/TimeLine.astro";
+import TimeLine from "@components/TimeLine.astro";
 ---
 <Layout title="Experiencia" urlMenuItem="/experience">
 
