--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -5,7 +5,7 @@ import dayjs from "dayjs";
 import es from "dayjs/locale/es";
 import localizedFormat from "dayjs/plugin/localizedFormat";
 
-const { title, description, pubDate, updatedDate, heroImage,  badge, url, target = "_blank", tags} = Astro.props;
+const { title, description, pubDate, heroImage,  badge, url, target = "_blank", tags} = Astro.props;
 
 const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
 
