--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import { type CollectionEntry, getCollection } from "astro:content";
-import { type ProjectSchema } from "../../content/config";
-import ProjectLayout from "../../layouts/ProjectLayout.astro";
-import createSlug from "../../lib/create_slug";
+import { type ProjectSchema } from "@content/config";
+import ProjectLayout from "@layouts/ProjectLayout.astro";
+import createSlug from "@lib/create_slug";
 
 export const prerender = true;
 
