some experience updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const last_posts = posts.slice(0, 3);
           <p
             class="prose dark:prose-invert text-lg md:text-xl lg:text-2xl font-bold inline text-accent"
           >
-            Desarrollador Full Stack
+            Mg. en Ingeniería de Software y Sistemas Informáticos
           </p>
           <Icon name="ecu" size={25} />
         </div>
@@ -64,13 +64,10 @@ const last_posts = posts.slice(0, 3);
           class="prose dark:prose-invert prose-sm md:prose-base lg:prose-lg mb-6 animate-fade lg:animate-fade-right lg:max-w-none"
         >
           <p>
-            Me dedico profesionalmente más de 3 años al desarrollo de software
-            especializado en el sector financiero 👨🏻‍💻. Mi último trabajo fue como
-            Ingeniero de desarrollo en el Banco del Austro. 💼 Actualmente
-            trabajo en AustroRed. También realizo proyectos como Freelancer. 📚
-            Me gusta leer libros sobre educación financiera y emprendimiento. 👨🏻‍🏫
-            Me gusta trabajar en equipo, ayudar a los demás y mi principal valor
-            es el respeto.
+            👋 Apasionado con el desarrollo de software 💻 tanto del Backend como Frontend (Desarrollador Full Stack). Actualmente trabajo en AustroRed 💼 que pertenece al sector financiero. Además, trabajo en la industria tecnológica desde 2019, ocupando puestos de ingeniería de desarrollo en grandes empresas como Banco del Austro y Mastermoto. También realizo proyectos como Freelancer.
+          </p>
+          <p>
+          📚 Si no estoy codificando, estoy leyendo libros sobre educación financiera y emprendimiento. Me gusta trabajar en equipo 👨🏻‍🏫, ayudar a los demás y mi personalidad es extrovertido.
           </p>
         </article>
 
