--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -29,6 +29,7 @@ import TimeLine from "@components/TimeLine.astro";
                         country = {experience.country}
                         logo = {experience.logo}
                         description = {experience.description}
+                        requirements = {experience.requirements}
                         height = {experience.height}
                         width = {experience.width}
                         >
