Add project SpaceX

--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -35,7 +35,7 @@ const { Content } = await entry.render();
   tags={project.tags}
   skills={project.skills}
 >
-  <div class="mb-10">
+  <div class="my-10">
     <Content />
   </div>
 </ProjectLayout>
