--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -359,7 +359,7 @@ const last_posts = posts.slice(0, 3);
                 return (
                     <div class="flex flex-row">
                       <div class="min-w-40">
-                        <img src=`/${education.image}` alt={education.specialty} class="w-40 mb-6 pr-6" />
+                        <img src=`${education.image}` alt={education.specialty} class="w-40 mb-6 pr-6" />
                       </div>
                       <div>
                         <h3 class="prose dark:prose-invert text-lg md:text-xl lg:text-2xl font-semibold text-accent mb-3 flex flex-row content-center justify-start max-w-none" >
