--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -94,7 +94,7 @@ import {EDUCATIONS} from "../config";
                             </p>
                             <div class="dark:bg-white dark:inline-block dark:p-2 dark:rounded-md dark:h-max">
                                 <Image
-                                src=`/${education.image}` alt={education.specialty}
+                                src=`${education.image}` alt={education.specialty}
                                 height="100"
                                 width="100"
                                 alt=`Logo ${education.specialty}`
@@ -139,7 +139,7 @@ import {EDUCATIONS} from "../config";
                             </p>
                             <div class="dark:bg-white dark:inline-block dark:p-2 dark:rounded-md dark:h-max">
                                 <Image
-                                src=`/${education.image}` alt={education.specialty}
+                                src=`${education.image}` alt={education.specialty}
                                 height="100"
                                 width="100"
                                 alt="Logo Austro Red"
@@ -186,7 +186,7 @@ import {EDUCATIONS} from "../config";
                             </p>
                             <div class="dark:bg-white dark:inline-block dark:p-2 dark:rounded-md dark:h-max">
                                 <Image
-                                src=`/${education.image}` alt={education.specialty}
+                                src=`${education.image}` alt={education.specialty}
                                 height="100"
                                 width="100"
                                 alt="Logo Austro Red"
