Improve project and blog navigation buttons

--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -74,7 +74,7 @@ const { page } = Astro.props;
       <div class="flex justify-between">
         {
           page.url.prev ? (
-            <a href={page.url.prev} class="btn btn-ghost text-primary my-10 mx-5">
+            <a href={page.url.prev} class="btn btn-primary my-10">
               {" "}
               <svg
                 class="h-6 w-6 fill-current md:h-8 md:w-8"
@@ -93,7 +93,7 @@ const { page } = Astro.props;
         }
         {
           page.url.next ? (
-            <a href={page.url.next} class="btn btn-ghost text-primary my-10 mx-5">
+            <a href={page.url.next} class="btn btn-primary my-10">
               Proyectos Anteriores{" "}
               <svg
                 class="h-6 w-6 fill-current md:h-8 md:w-8"
