Menu improvements when mobile and adjust the theme button.

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -58,7 +58,7 @@ const { urlMenuItem } = Astro.props;
         ))
       }
     </ul>
-    <div class="navbar-end max-sm:w-1/3 ml-2 md:ml-0">
+    <div class="navbar-end w-[30%] max-sm:w-1/3 ml-2 md:ml-20">
       <ThemeController />
       <button id="btn-download" class="btn text-lg btn-accent ml-4 max-md:hidden hover:scale-105">
         <Icon name="download" />
