change email copy alert background color

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,7 +46,7 @@ const currentYear = new Date().getFullYear();
                             id="altEmailCopyFooter"
                             class="toast toast-center hidden"
                         >
-                            <div class="alert alert-info">
+                            <div class="alert alert-info bg-accent">
                                 <span>Copiado</span>
                                 <Icon name="copy" class="inline-block ml-2" />
                             </div>
