--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -40,7 +40,7 @@ import { MYEMAIL } from "../config";
                         </button>
                         </div>
                         <div id="altEmailCopy" class="toast toast-center hidden">
-                        <div class="alert alert-info">
+                        <div class="alert alert-info bg-accent">
                             <span>Copiado</span>
                             <Icon name="copy" class="inline-block ml-2" />
                         </div>
