--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -405,7 +405,7 @@ const last_posts = posts.slice(0, 3);
               </button>
             </div>
             <div id="altEmailCopy" class="toast toast-center hidden">
-              <div class="alert alert-info">
+              <div class="alert alert-info bg-accent">
                 <span>Copiado</span>
                 <Icon name="copy" class="inline-block ml-2" />
               </div>
