--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -62,6 +62,12 @@ import { MYEMAIL } from "../config";
                     <a class="hover:text-primary" href="https://www.instagram.com/palaciosluismig/" target="_blank">
                         <Icon name="social_networks/instagram" size={30} />
                     </a>
+                    
+                </div>
+                <div class="md:hidden">
+                    <button id="btn-download-contact" class="btn mb-12 px-2.5 text-lg btn-accent hover:scale-105 w-full">
+                        <Icon name="download" />Descargar CV
+                    </button>
                 </div>
 
             </section>
@@ -91,4 +97,16 @@ import { MYEMAIL } from "../config";
         btnEmailCopy.addEventListener("click", () => {emailCopy("lblEmail")});
     }
     })
+
+    const btnDownload =  document.getElementById("btn-download-contact");
+    
+    if (btnDownload){
+      btnDownload.addEventListener("click", function() {
+        const url = "/cv/CV-Luis-Miguel-Palacios.pdf";
+        var link = document.createElement("a");
+        link.href = url;
+        link.setAttribute("download", "CV-Luis-Miguel-Palacios.pdf");
+        link.click();
+    });
+    }
 </script>
