--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -152,7 +152,7 @@ const last_posts = posts.slice(0, 3);
         <h2
           class="prose dark:prose-invert text-xl md:text-2xl lg:text-3xl font-bold text-primary mb-10 flex flex-row items-center"
         >
-          <Icon name="projects" class="mr-2" />Proyectos como Freelancer
+          <Icon name="projects" class="mr-2" />Proyectos
         </h2>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-8">
