Issue #1. Arreglar la separación de los tags en la vista de un proyecto en específico.

--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -59,7 +59,7 @@ const displayDate = dayjs(pubDate).format("LL");
         tags &&
           tags.map((tag) => (
             <div
-              class="badge badge-outline mr-2 no-underline text-primary font-medium p-4"
+              class="badge badge-outline mr-2 no-underline text-primary font-medium p-4 mb-2"
             >
               {tag}
             </div>
